# myMusicPlayer

./: CMakeLists.txt
resources/: res.qrc
resources/qss/: myQssFile.qss
src/: CMakeLists.txt  basic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myDatabase.cpp  myDatabase.h  mycontroller.cpp  mycontroller.h  mylog.cpp  mylog.h  mymediaplayer.cpp  mymediaplayer.h  util.cpp  util.h
